nexrad-model/tests/snapshots/fixture_snapshots__clear_air_plains_metadata.snap
---
source: nexrad-model/tests/fixture_snapshots.rs
expression: snapshot
---
coverage_pattern_number: 32
sweep_count: 3
sweeps:
  - elevation_number: 1
    radial_count: 720
    first_azimuth_degrees: 342.2516
    elevation_angle_degrees: 0.32958984
    azimuth_spacing_degrees: 0.5
    moments_present:
      - REF
      - ZDR
      - PHI
      - RHO
  - elevation_number: 2
    radial_count: 720
    first_azimuth_degrees: 346.2506
    elevation_angle_degrees: 0.43945313
    azimuth_spacing_degrees: 0.5
    moments_present:
      - REF
      - VEL
      - SW
  - elevation_number: 3
    radial_count: 720
    first_azimuth_degrees: 351.24664
    elevation_angle_degrees: 1.2854004
    azimuth_spacing_degrees: 0.5
    moments_present:
      - REF
      - ZDR
      - PHI
      - RHO
