nexrad-model/tests/snapshots/fixture_snapshots__existing_kdmx_moment_stats.snap
---
source: nexrad-model/tests/fixture_snapshots.rs
assertion_line: 233
expression: stats
---
sweep_index: 0
radial_index: 0
reflectivity:
  gate_count: 1832
  first_gate_range_km: 2.125
  gate_interval_km: 0.25
  data_sha256: 5c0308631918a42b1533b6bea34aa14371380d58d27815598b5ba95a0f939609
velocity: ~
spectrum_width: ~
differential_reflectivity:
  gate_count: 1192
  first_gate_range_km: 2.125
  gate_interval_km: 0.25
  data_sha256: c1e54fec108d6c7c21b1af6fdbd618cb697452cdb7af356afddf409e83f74f49
