nexrad-model/tests/snapshots/fixture_snapshots__modern_build_kdmx_moment_stats.snap
---
source: nexrad-model/tests/fixture_snapshots.rs
assertion_line: 249
expression: stats
---
sweep_index: 0
radial_index: 0
reflectivity:
  gate_count: 1832
  first_gate_range_km: 2.125
  gate_interval_km: 0.25
  data_sha256: 7ef0e5e1be717d552430ffd4a11099ac03f280ebc76bc32f768f610fee70f147
velocity: ~
spectrum_width: ~
differential_reflectivity:
  gate_count: 1192
  first_gate_range_km: 2.125
  gate_interval_km: 0.25
  data_sha256: 65b642bf82b3241baede9d1f164e3e2932bb936afbbef3c0f665301c6d7a6945
