nexrad-model/tests/snapshots/fixture_snapshots__stratiform_noreaster_moment_stats.snap
---
source: nexrad-model/tests/fixture_snapshots.rs
expression: stats
---
sweep_index: 0
radial_index: 0
reflectivity:
  gate_count: 1832
  first_gate_range_km: 2.125
  gate_interval_km: 0.25
  data_sha256: fb8cd636ce517bc39a9bd7708409d96f3b63f32d0d16901b3b9d7d4354c5c373
velocity: ~
spectrum_width: ~
differential_reflectivity:
  gate_count: 1192
  first_gate_range_km: 2.125
  gate_interval_km: 0.25
  data_sha256: 970b7cb7245c30f14d800a1d16d0410675ce3379b6580f052691bb9a9293ec17
differential_phase:
  gate_count: 1192
  first_gate_range_km: 2.125
  gate_interval_km: 0.25
  data_sha256: ab79ff451afaddc7852f03067f1e5cb6e24cde7bcab225f6b9ba5bc162a1ed12
correlation_coefficient:
  gate_count: 1192
  first_gate_range_km: 2.125
  gate_interval_km: 0.25
  data_sha256: 332f7b9fc96df97be8b633837094a101ea5fc26c034860bc0dfc647786d9f1c0
clutter_filter_power: ~
