nexrad-model/tests/snapshots/fixture_snapshots__supercell_texas_metadata.snap
---
source: nexrad-model/tests/fixture_snapshots.rs
expression: snapshot
---
coverage_pattern_number: 212
sweep_count: 3
sweeps:
  - elevation_number: 1
    radial_count: 720
    first_azimuth_degrees: 202.25555
    elevation_angle_degrees: 0.5465698
    azimuth_spacing_degrees: 0.5
    moments_present:
      - REF
      - ZDR
      - PHI
      - RHO
  - elevation_number: 2
    radial_count: 720
    first_azimuth_degrees: 222.19574
    elevation_angle_degrees: 0.48339844
    azimuth_spacing_degrees: 0.5
    moments_present:
      - REF
      - VEL
      - SW
  - elevation_number: 3
    radial_count: 720
    first_azimuth_degrees: 239.23279
    elevation_angle_degrees: 0.77178955
    azimuth_spacing_degrees: 0.5
    moments_present:
      - REF
      - ZDR
      - PHI
      - RHO
